# PiFinder

./: README.md
HW/: PiFinder-cache.lib  PiFinder.kicad_pcb  PiFinder.pro  PiFinder.sch
SW/: CMakeLists.txt
SW/libVL53L0X/: CMakeLists.txt
SW/libVL53L0X/core/src/: vl53l0x_api.c
SW/libVL53L0X/platform/src/: vl53l0x_platform.c
SW/src/: main.cpp
hardware/: PiFinder-cache.lib  PiFinder.kicad_pcb  PiFinder.pro
software/: CMakeLists.txt  Makefile  README.md  setup.py  toolchain.txt
software/app/: CMakeLists.txt
software/app/src/: main.cpp
software/libVL53L0X/: CMakeLists.txt
software/libVL53L0X/platform/src/: vl53l0x_platform_log.c
software/libpifinder/: CMakeLists.txt
software/libpifinder/src/: vl53l0x_i2c_platform.c  vl53l0x_platform.c
software/python/: CMakeLists.txt  laser.c  requirements.txt  setup.py
software/python/PiFinder/: laser.c
software/python/accel/: PiFinder.py  __init__.py
software/python/src/: PiFinder.c
software/python/tests/: test_pifinder.py
